--- a/servicio-items.properties
+++ b/servicio-items.properties
@@ -1,1 +1,4 @@
-server.port=8005 
+server.port=8005
+configuracion.texto=Ambiente default
+configuracion.autor.nombre=Fabian
+configuracion.autor.email=fveschi@gmail.com
