--- a/servicio-items.properties
+++ b/servicio-items.properties
@@ -1,4 +1,4 @@
 server.port=8005
-configuracion.texto=Ambiente default
+configuracion.texto=Ambiente default base
 configuracion.autor.nombre=Fabian
 configuracion.autor.email=fveschi@gmail.com
